change file structure

--- a/media/index.html
+++ b/media/index.html
@@ -9,9 +9,9 @@
     <header id="top">
       <nav>
         <ul>
-          <li><a href="./">Profile</a></li>
-          <li><a href="./table.html">Courses and Schools in Altschool</a></li>
-          <li><a href="./media.html">My Powerful Message</a></li>
+          <li><a href="../">Profile</a></li>
+          <li><a href="../table/">Courses and Schools in Altschool</a></li>
+          <li><a href="./">My Powerful Message</a></li>
         </ul>
       </nav>
       <h1>My Powerful Message</h1>
@@ -22,10 +22,10 @@
         <h2>Profile picture</h2>
 
         <picture>
-          <source src="media/image/img.jpg" type="image/jpg" />
-          <source src="media/image/img.png" type="image/jpg" />
-          <source src="media/image/img.svg" type="image/jpg" />
-          <img src="media/image/img.jpg" alt="Daniel Nweze" />
+          <source src="../assests/image/img.jpg" type="image/jpg" />
+          <source src="../assests/image/img.png" type="image/png" />
+          <source src="../assests/image/img.svg" type="image/svg" />
+          <img src="../assests/image/img.jpg" alt="Daniel Nweze" />
         </picture>
       </section>
 
@@ -33,7 +33,7 @@
         <h2>Audio Message</h2>
 
         <audio
-          src="media/video/altschool-assignment2-audio.aac"
+          src="../assests/video/altschool-assignment2-audio.aac"
           controls
         ></audio>
       </section>
