--- a/table/index.html
+++ b/table/index.html
@@ -9,9 +9,9 @@
     <header id="top">
       <nav>
         <ul>
-          <li><a href="./">Profile</a></li>
-          <li><a href="./table.html">Courses and Schools in Altschool</a></li>
-          <li><a href="./media.html">My Powerful Message</a></li>
+          <li><a href="../">Profile</a></li>
+          <li><a href="./">Courses and Schools in Altschool</a></li>
+          <li><a href="../media/">My Powerful Message</a></li>
         </ul>
       </nav>
 
